force-app/main/default/objects/OneCRM__LookupRollupSummaryScheduleItems__c/fields/OneCRM__ParentId__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__ParentId__c</fullName>
    <label>Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>