force-app/main/default/objects/OneCRM__LookupRollupSummaryScheduleItems__c/fields/OneCRM__ParentKeyPrefix__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__ParentKeyPrefix__c</fullName>
    <formula>LEFT( OneCRM__ParentId__c , 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Key Prefix</label>
    <type>Text</type>
</CustomField>