force-app/main/default/objects/OneCRM__LookupRollupSummaryScheduleItems__c/fields/OneCRM__ParentRecord__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__ParentRecord__c</fullName>
    <formula>HYPERLINK( OneCRM__ParentId__c , &apos;Parent Record&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Record</label>
    <type>Text</type>
</CustomField>