force-app/main/default/objects/OneCRM__LookupRollupSummaryScheduleItems__c/fields/OneCRM__QualifiedParentID__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__QualifiedParentID__c</fullName>
    <externalId>true</externalId>
    <label>Qualified Parent ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>